# Fliq-Desktop-Flipclock

./: LICENSE  README.md  colorPicker.html  index.html  package-lock.json  package.json  stylingMenu.html  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml
src/: App.tsx  ColorPickMenu.tsx  Flip.jsx  FlipClock.jsx  FlipClocknew.jsx  StylingMenu.tsx  colorpicker-main.tsx  definitions.ts  flipclockstyles.css  main.tsx  styles.css  stylingmenu-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/pages/: App.tsx  FlipClock.jsx  StylingMenu.tsx  atoms.ts
src/styles/: flipclockstyles.css  styles.css
